bhushan::part release approval, full release apprl

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -106,10 +106,9 @@
                         </button>
                         <mat-menu #menu="matMenu" xPosition="before">
                             <button mat-menu-item (click)="viewLoan(loan)">View Loan</button>
-                            <button mat-menu-item (click)="interestEmi(loan)">Pay Interest EMI</button>
+                            <button mat-menu-item (click)="interestEmi(loan)">Quick Pay</button>
                             <button mat-menu-item (click)="topUp(loan)">Top Up</button>
-                            <button mat-menu-item (click)="partPayment(loan)">Part Payment</button>
-                            <button mat-menu-item (click)="partRelease(loan)">Part Release</button>
+                            <button mat-menu-item (click)="jewelleryRelease(loan)">Part Release</button>
                             <button mat-menu-item (click)="newLoan(loan)">Add New Loan</button>
                         </mat-menu>
 
