--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -100,6 +100,12 @@
                             <mat-error *ngIf="controls.finalLoanAmount.errors?.mimimumAmt">
                                 <small>Entered Amount should be greater than minimum loan amount</small>
                             </mat-error>
+                            <mat-error *ngIf="controls.finalLoanAmount.errors?.defalutNotRange">
+                                <small>Unsecured amount is not within the range of default unsecured scheme</small>
+                            </mat-error>
+                            <mat-error *ngIf="controls.finalLoanAmount.errors?.noDefaultScheme">
+                                <small>No default unsecured scheme is mapped to this secured scheme</small>
+                            </mat-error>
                         </div>
 
 
@@ -166,7 +172,7 @@
                     </div>
                     <div class="col-7">
                         <input type="number" class="form-control" formControlName="interestRate" placeholder="00%"
-                            [class.isError]="controls.interestRate.touched && controls.interestRate.invalid" />
+                            [class.isError]="controls.interestRate.touched && controls.interestRate.invalid" readonly/>
                         <mat-error *ngIf="controls.interestRate.errors?.required && controls.interestRate.touched">
                             Required field
                         </mat-error>
