bhushan::part, full release final

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -336,6 +336,37 @@
           </div>
         </div>
 
+        <!-- from and to date -->
+        <!-- <div class="kt-portlet__body" *ngIf="filterName =='fromDate&toDate'">
+          <div class="kt-form">
+            <form [formGroup]="filterForm">
+              <div class="form-group kt-form__group row">
+                <div class="col-12 kt-margin-bottom-20-mobile">
+                  <div class="row">
+                    <div class="col-5">
+                      <label>From Date</label>
+                      <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
+                        (click)="pickerStartDate.open()" formControlName="startDate">
+                      <mat-datepicker #pickerStartDate></mat-datepicker>
+                    </div>
+                    <div class="col-4">
+                      <label>From Date</label>
+                      <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
+                        (click)="pickerStartDate.open()" formControlName="startDate">
+                      <mat-datepicker #pickerStartDate></mat-datepicker>
+                    </div>
+                    <div class="col-3">
+                      <kt-button [type]="'button'" [value]="'Apply'" class="btn-absolute-bottom-right pull-right"
+                        (click)="applyFilter()">
+                      </kt-button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div> -->
+
       </div>
     </div>
   </div>
