--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -168,7 +168,7 @@
                     <div *ngIf="showTextBoxBM && userType == 6">
                         <div class="row kt-padding-l-10">
                             <div class="col-4 form-label">
-                                <label for="" class="kt-padding-l-10 m-0">Reason by B.M -</label>
+                                <label for="" class="kt-padding-l-10 m-0">Reason by OPS Team</label>
                             </div>
                             <div class="col-8 ">
                                 {{cceControls.reasonFromOperationalTeam.value}}
