--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
@@ -212,7 +212,7 @@
                             </div>
                             <div class="col-8">
                                 <div class="input-group"
-                                    [class.isError]="controls.passbookImgName.touched && controls.passbookImgName.errors?.required">
+                                    [class.isError]="controls.passbookImg.touched && controls.passbookImg.errors?.required">
                                     <input type="text" class="form-control" formControlName="passbookImgName" readonly
                                         placeholder="image.jpg" aria-label="Image" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
