--- a/gold-admin-frontend/src/app/views/pages/admin/customer-management/loan-details/loan-details.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/customer-management/loan-details/loan-details.component.scss
@@ -22,4 +22,17 @@
         font-size: 14px;
         margin   : 15px 0;
     }
+    .pdf{
+        overflow: hidden;
+        border-radius: 15px;
+    }
+
+	iframe {
+		pointer-events: none;
+		display: block;
+		margin-top: -65px;
+        margin-left: -7px;
+        // height: 195px;
+        // width: 100%;
+	}
 }
