--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -3,14 +3,14 @@
         <div class="row">
             <div class="col-12">
                 <mat-tab-group [(selectedIndex)]="selected" (selectedTabChange)="next($event)">
-                    <mat-tab label="Basic Details">
+                    <mat-tab label="Basic Details" [disabled]="disabled[0]">
                         <kt-basic-details (id)="loan($event)" (apiHit)="getSingleDetails($event)" [details]="customerDetail"
-                        (next)="next($event)"></kt-basic-details>
+                        (next)="next($event)" [loanTransfer]="laonTransferDetails"></kt-basic-details>
                     </mat-tab>
-                    <mat-tab label="Upload Documents">
-                        <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds"></kt-upload-loan-documents>
+                    <mat-tab label="Upload Documents" [disabled]="disabled[1]">
+                        <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds" [loanTransfer]="laonTransferDetails" (next)="next($event)"></kt-upload-loan-documents>
                     </mat-tab>
-                    <mat-tab label="Loan Trasnfer Approval" [formGroup]="approvalForm">
+                    <mat-tab label="Loan Trasnfer Approval" [formGroup]="approvalForm" [disabled]="disabled[2]">
                         <div class="row justify-content-center">
                             <div class="col-6">
                                 <div class="row">
@@ -18,7 +18,7 @@
                                         <label class="kt-padding-l-10">B.M Status </label>
                                     </div>
                                     <div class="col-6">
-                                        <select name="" id="" class="form-control"
+                                        <select name="" id="" class="form-control" 
                                             formControlName="loanTransferStatusForBM">
                                             <option value="">Select Status</option>
                                             <option [value]="manager.value" *ngFor="let manager of branchManager">
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                     </mat-tab>
-                    <mat-tab label="Disbursal" [formGroup]="disbursalForm">
+                    <mat-tab label="Disbursal" [formGroup]="disbursalForm" [disabled]="disabled[3]">
 
                         <div class="row justify-content-center kt-padding-t-25">
                             <div class="col-6">
@@ -74,7 +74,7 @@
                                         <label for="">LOAN ID</label>
                                     </div>
                                     <div class="col-6">
-                                        <input type="text" class="form-control" placeholder="laon id" formControlName="disbursedLoanAmount">
+                                        <input type="text" class="form-control" placeholder="laon id" formControlName="loanUniqueId"  readonly>
                                     </div>
                                 </div>
                             </div>
@@ -86,7 +86,7 @@
                                         <label for="">Disbursed Loan Amount</label>
                                     </div>
                                     <div class="col-6">
-                                        <input type="text" class="form-control" placeholder="1000000" formControlName="loanUniqueId">
+                                        <input type="text" class="form-control" placeholder="1000000" formControlName="disbursedLoanAmount" readonly>
                                     </div>
                                 </div>
                             </div>
@@ -98,14 +98,14 @@
                                         <label for="">Transaction ID</label>
                                     </div>
                                     <div class="col-6">
-                                        <input type="text" class="form-control" placeholder="Transxxxxx" formControlName="transactionId">
+                                        <input type="text" class="form-control" placeholder="Transxxxxx" formControlName="transactionId" re>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row kt-padding-t-25">
                             <div class="offset-10 col-2">
-                                <kt-button [type]="'button'" [value]="'Next'" (click)="disbursal()"></kt-button>
+                                <kt-button [type]="'button'" [value]="'Save'" (click)="disbursal()"></kt-button>
                             </div>
                         </div>
                     </mat-tab>
