minor bug fixes

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -124,7 +124,7 @@
                         <ng-container *ngIf="lead.status.id == '1'">
                             <div [ngStyle]="{'display': 'inherit'}">
                                 <button (click)="assign(lead)" class="apply-kyc"
-                                    *ngxPermissionsOnly="['customerKycAdd']">Assign Appraiser</button>
+                                    *ngxPermissionsOnly="['assignAppraiserEdit']">Assign Appraiser</button>
                             </div>
                         </ng-container>
 
