--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
@@ -201,6 +201,9 @@
                                 <mat-error
                                     *ngIf="controls.accountNumber.touched && controls.accountNumber.errors?.required">
                                     Required field</mat-error>
+                                <!-- <mat-error
+                                    *ngIf="controls.accountNumber.touched && controls.accountNumber.errors?.pattern">
+                                    Invalid Input </mat-error> -->
                             </div>
                         </div>
                         <div class="row kt-padding-t-15" *ngIf="data.action!='view'">
