--- a/gold-admin-frontend/src/app/views/pages/admin/masters/packet-location/packet-location-list/packet-location-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/packet-location/packet-location-list/packet-location-list.component.html
@@ -11,9 +11,14 @@
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <span class="kt-pointer" (click)="editLocation(item)">Edit</span>
-                        <div class="px-2">|</div>
-                        <span class="kt-pointer text-danger" (click)="deleteLocation(item)">Delete</span>
+                        <div [ngStyle]="{'display': 'inherit'}"
+                            *ngxPermissionsOnly="['editPacketLocation', 'deletePacketLocation']">
+                            <span *ngxPermissionsOnly="['editPacketLocation']" class="kt-pointer"
+                                (click)="editLocation(item)">Edit</span>
+                            <div class="px-2">|</div>
+                            <span *ngxPermissionsOnly="['deletePacketLocation']" class="kt-pointer text-danger"
+                                (click)="deleteLocation(item)">Delete</span>
+                        </div>
                     </mat-cell>
                 </ng-container>
 
