--- a/gold-admin-frontend/src/app/views/pages/admin/masters/occupation/occupation-list/occupation-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/occupation/occupation-list/occupation-list.component.html
@@ -11,10 +11,15 @@
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <div [ngStyle]="{'display': 'inherit'}" *ngIf="item.description !== 'Other'">
-                            <span class="kt-pointer" (click)="editOccupation(item)">Edit</span>
-                            <div class="px-2">|</div>
-                            <span class="kt-pointer text-danger" (click)="deleteOccupation(item)">Delete</span>
+                        <div [ngStyle]="{'display': 'inherit'}"
+                            *ngxPermissionsOnly="['editOccupation', 'deleteOccupation']">
+                            <ng-container *ngIf="item.description !== 'Other'">
+                                <span *ngxPermissionsOnly="['editOccupation']" class="kt-pointer"
+                                    (click)="editOccupation(item)">Edit</span>
+                                <div class="px-2">|</div>
+                                <span *ngxPermissionsOnly="['deleteOccupation']" class="kt-pointer text-danger"
+                                    (click)="deleteOccupation(item)">Delete</span>
+                            </ng-container>
                         </div>
                     </mat-cell>
                 </ng-container>
