--- a/gold-admin-frontend/src/app/views/pages/admin/masters/ornaments/ornaments-list/ornaments-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/ornaments/ornaments-list/ornaments-list.component.html
@@ -11,10 +11,13 @@
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <div [ngStyle]="{'display': 'inherit'}">
-                            <span class="kt-pointer" (click)="editOrnament(item)">Edit</span>
+                        <div [ngStyle]="{'display': 'inherit'}"
+                            *ngxPermissionsOnly="['editOrnament', 'deleteOrnament']">
+                            <span *ngxPermissionsOnly="['editOrnament']" class="kt-pointer"
+                                (click)="editOrnament(item)">Edit</span>
                             <div class="px-2">|</div>
-                            <span class="kt-pointer text-danger" (click)="deleteOrnament(item)">Delete</span>
+                            <span *ngxPermissionsOnly="['deleteOrnament']" class="kt-pointer text-danger"
+                                (click)="deleteOrnament(item)">Delete</span>
                         </div>
                     </mat-cell>
                 </ng-container>
