bhushan:: auth changes, aadhar, profile

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-address/user-address.component.html
@@ -32,7 +32,7 @@
                             </div>
                             <div class="col-7">
                                 <input formControlName="identityProofNumber" type="text" aria-label="Pin Code"
-                                    placeholder="Aadhar Number" class="form-control" numbersOnly maxlength="12"
+                                    placeholder="Aadhaar Number" class="form-control" numbersOnly maxlength="12"
                                     [class.isError]="controls.identityProofNumber.touched && controls.identityProofNumber.invalid">
                                 <mat-error
                                     *ngIf="controls.identityProofNumber.errors?.required && controls.identityProofNumber.touched">
