--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -123,7 +123,7 @@
                     <mat-cell *matCellDef="let lead">
                         <ng-container *ngIf="lead.status.id == '1'">
                             <div [ngStyle]="{'display': 'inherit'}">
-                                <button (click)="assign(lead)" class="apply-kyc"
+                                <button (click)="false" class="apply-kyc" style="cursor: not-allowed"
                                     *ngxPermissionsOnly="['assignAppraiserEdit']">Assign Appraiser</button>
                             </div>
                         </ng-container>
